test/errors/type/str/rtrim3.yasl
mt.lookup('', .rtrim)(.str, true)
